[tool.poetry]
name = "chain"
version = "0.1.0"
description = ""
authors = ["Gustavo Santos <gustavosisa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
anyio = "^3.7.0"
sqlalchemy = "^2.0.17"
requests = "^2.31.0"
rocketry = "^2.5.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

